[feat] - добавит настройки предмета и его связи
