# server/routes/subjects.routes.js
@@ -6,4 +6,8 @@ export const subjectsRouter = Router()
 
 subjectsRouter.get('/', subjectsController.getSubjects)
 subjectsRouter.post('/', subjectsController.createSubject)
+subjectsRouter.get('/:id', subjectsController.getSubject)
+subjectsRouter.patch('/:id', subjectsController.updateSubject)
+subjectsRouter.get('/:id/groups', subjectsController.getSubjectGroups)
+subjectsRouter.get('/:id/teachers', subjectsController.getSubjectTeachers)
 subjectsRouter.delete('/:id', subjectsController.deleteSubject)
